# omninxt-replica

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  Makefile  README.md  ruff.toml
.github/workflows/: run-ruff.yml
jetson-apps/: README.md
jetson-apps/comm/: Dockerfile  Makefile
jetson-apps/comm/resources/oak_ffc_4p/: CMakeLists.txt  nodelet_plugins.xml  package.xml
jetson-apps/comm/resources/oak_ffc_4p/launch/: foxglove_bridge.launch  quadcam.launch  quadcam_calib.launch
jetson-apps/comm/resources/oak_ffc_4p/src/: quadcam_nodelet.cpp
jetson-apps/comm/scripts/: calibr.sh  ffc_4p.sh  mavros.sh  rosbag.sh
jetson-apps/d2slam/: Dockerfile.base  Dockerfile.noetic  Makefile
jetson-apps/d2slam/configs/example/: stereo_calib_2_3_240_320.yaml  stereo_calib_3_0_240_320.yaml
jetson-apps/d2slam/d2frontend/: CMakeLists.txt  nodelet_plugins.xml
jetson-apps/d2slam/d2frontend/include/d2frontend/: d2featuretracker.h  d2frontend.h  d2frontend_params.h  d2landmark_manager.h  loop_cam.h  loop_detector.h  loop_net.h  utils.h
jetson-apps/d2slam/d2frontend/include/d2frontend/CNN/: CNN_generic.h  mobilenetvlad_onnx.h  onnx_generic.h  superglue_onnx.h  superpoint.h  superpoint_common.h  superpoint_onnx.h
jetson-apps/d2slam/d2frontend/src/: d2frontend.cpp  d2frontend_nodelet.cpp  d2frontend_params.cpp  d2landmark_manager.cpp  loop_cam.cpp  loop_detector.cpp  loop_net.cpp  loop_utils.cpp
jetson-apps/d2slam/d2frontend/src/CNN/: superglue_onnx.cpp  superpoint.cpp  superpoint_common.cpp  superpoint_onnx.cpp
jetson-apps/d2slam/d2frontend/srv/: HFNetSrv.srv
jetson-apps/d2slam/d2frontend/tests/: camera_undistort_test.cpp  d2frontend_network_tester.cpp  d2frontend_test.cpp  loop_tensorrt_test.cpp
jetson-apps/d2slam/d2vins/launch/: vins-node.launch
jetson-apps/d2slam/d2vins/src/factors/: projectionTwoFrameOneCamFactor.h
jetson-apps/d2slam/quadcam_depth_est/: CMakeLists.txt
jetson-apps/d2slam/quadcam_depth_est/include/: hitnet.hpp  pcl_utils.hpp  quadcam_depth_est_trt.hpp  virtual_stereo.hpp
jetson-apps/d2slam/quadcam_depth_est/launch/: depth-node.launch
jetson-apps/d2slam/quadcam_depth_est/src/: hitnet.cpp  quadcam_depth_est_node.cpp  quadcam_depth_est_trt.cpp  virtual_stereo.cpp
jetson-apps/d2slam/resources/configs/example/: fisheye_cams.yaml  quadcam_depth.yaml  quadcam_single.yaml  stereo_calib_0_1_240_320.yaml  stereo_calib_1_2_240_320.yaml
jetson-apps/d2slam/scripts/: it_base.sh  it_noetic.sh  omni_depth.sh  omni_vins.sh
kalibr-tools/: Dockerfile.melodic  Dockerfile.noetic  Makefile  README.md  configurator.py  generate.py
kalibr-tools/configs/: imu.yaml
kalibr-tools/data/: keepme.md
kalibr-tools/hacks/: IccSensors.py
kalibr-tools/kalibr-tools/: calibrate.py  extract.py  generate.py
kalibr-tools/kalibr-tools/utils/: bag_extractor.py  common.py  config_loader.py  configurator.py  fisheye_undist.py  photometric_calibration.py  photometric_calibrator.py  stereo_gen.py  virtual_stereo_calibration.py
kalibr-tools/scripts/: calibrate.sh  extract.sh
kalibr-tools/utils/: Utils.py
