<?xml version="1.0"?>
<package format="3">
  <name>oak_ffc_4p</name>
  <version>2.9.0</version>
  <description>The Depthai OAK-FFC-4P driver package</description>
  <maintainer email="originholic@gmail.com">nlpng</maintainer>
  <author>Neil Huang</author>

  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>message_filters</depend>

  <depend>cv_bridge</depend>
  <depend>depthai</depend>
  <depend>depthai_ros_msgs</depend>
  <depend>depthai_bridge</depend>
  <depend>depthai_descriptions</depend>
  <depend>image_transport</depend>
  <depend>libopencv-dev</depend>
  <depend>ros_environment</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>foxglove_msgs</depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>depth_image_proc</exec_depend>
  <exec_depend>xacro</exec_depend>

  <depend>nodelet</depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
    <build_type>catkin</build_type>
  </export>

</package>
